force-app/main/default/objects/Goal__c/fields/Comission_Percent__c.field-meta.xml
<CustomField>
    <fullName>Comission_Percent__c</fullName>
    <label>Porcentagem De Comissão Da Meta</label>
    <summarizedField>GoalItem__c.Percentage_Achieved__c</summarizedField>
    <summaryForeignKey>GoalItem__c.Goal__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>