force-app/main/default/objects/Goal__c/fields/Commission_Amount__c.field-meta.xml
<CustomField>
    <fullName>Commission_Amount__c</fullName>
    <formula>Comission_Percent__c  *  Sales_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor de Comissão</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>