force-app/main/default/objects/Goal__c/fields/Sales_Amount__c.field-meta.xml
<CustomField>
    <fullName>Sales_Amount__c</fullName>
    <description>Valor total vendido pelo vendedor naquele ano.</description>
    <label>Valor de vendas</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>