force-app/main/default/objects/Goal__c/fields/Seller__c.field-meta.xml
<CustomField>
    <fullName>Seller__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendedor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Metas</relationshipName>
    <type>Lookup</type>
</CustomField>